[gd_scene load_steps=2 format=3 uid="uid://bgpy5ovhtdrvx"]

[ext_resource type="Script" path="res://scripts/game_over.gd" id="1_ixswl"]


[node name="GameOver" type="Control"]
layout_mode = 3
anchors_preset = 0
offset_right = 1277.0
offset_bottom = 721.0
script = ExtResource("1_ixswl")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 0
offset_left = 392.0
offset_top = 88.0
offset_right = 900.0
offset_bottom = 293.0
alignment = 1

[node name="GameOverLabel" type="Label" parent="VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 65
text = "Game Over"
horizontal_alignment = 1
vertical_alignment = 1

[node name="VBoxContainer2" type="VBoxContainer" parent="."]
layout_mode = 0
offset_left = 448.0
offset_top = 384.0
offset_right = 827.0
offset_bottom = 569.0
theme_override_constants/separation = 12
alignment = 1

[node name="PlayAgain" type="Button" parent="VBoxContainer2"]
layout_mode = 2
theme_override_font_sizes/font_size = 30
text = "Play Again"

[node name="MainMenu" type="Button" parent="VBoxContainer2"]
layout_mode = 2
theme_override_font_sizes/font_size = 30
text = "Main Menu"

[node name="Quit" type="Button" parent="VBoxContainer2"]
layout_mode = 2
theme_override_font_sizes/font_size = 30
text = "Quit"

[node name="VBoxContainer3" type="VBoxContainer" parent="."]
layout_mode = 0
offset_top = 288.0
offset_right = 1280.0
offset_bottom = 356.0

[node name="FinalScoreLabel" type="Label" parent="VBoxContainer3"]
layout_mode = 2
theme_override_font_sizes/font_size = 28
text = "Final Score: 0"
horizontal_alignment = 1

[connection signal="pressed" from="VBoxContainer2/PlayAgain" to="." method="_on_play_again_pressed"]
[connection signal="pressed" from="VBoxContainer2/MainMenu" to="." method="_on_main_menu_pressed"]
[connection signal="pressed" from="VBoxContainer2/Quit" to="." method="_on_quit_pressed"]
